# Aulas-Dash

./: models.py  pyproject.toml  routes.py
attached_assets/: Pasted--backend-py-import-sqlite3-Conectar-ao-banco-de-dados-conn-sqlite3-connect-aulas-partic-1744855731449.txt  Pasted--backend-py-import-sqlite3-Conectar-ao-banco-de-dados-conn-sqlite3-connect-aulas-partic-1744855754635.txt  Pasted-Objetivo-Alimentar-o-banco-de-dados-do-site-Python-HTML-com-os-dados-atualizados-das-aulas-fixa-1744852753918.txt  Pasted-Objetivo-Quero-expandir-as-funcionalidades-do-meu-site-que-j-est-rodando-corretamente-em-Python--1744849312272.txt  content-1744849221107.md
scripts/: import_schedule_data.py  import_whatsapp_data.py  migrate_lesson_type.py
templates/: banco_dados.html  base.html  daily_lessons.html  dashboard.html  gestao_financeira.html  gestao_tempo.html  guardian_report.html  guardians.html  holiday_form.html  holidays.html  import_schedule_data.html  pareto_chart.html  student_report.html  students.html
templates/forms/: cancel_lesson.html  confirm_lesson.html  extra_lesson_form.html  holiday_form.html  reschedule_lesson.html
templates/pdf/: guardian_report_pdf.html  student_report_pdf.html
