[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
    "plotly>=6.0.1",
    "xhtml2pdf>=0.2.17",
    "numpy>=2.2.4",
    "twilio>=9.5.2",
]
[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
email-validator = "^2.2.0"
flask-login = "^0.6.3"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.40"
werkzeug = "^3.1.3"
plotly = "^6.0.1"
xhtml2pdf = "^0.2.17"
numpy = "^2.2.4"
twilio = "^9.5.2"

[tool.poetry.dev-dependencies]
# Add development dependencies here

[build-system]
requires = ["poetry>=1.1.0"]
build-backend = "poetry.core.masonry.api"
